# SightLine

./: .gitignore  README.md  pyproject.toml
docs/: README.md
docs/execution-log/: 2026-03-12-task-1.4.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: AppShell.tsx  MetricCard.tsx
frontend/src/app/: App.tsx  main.ts  styles.css
frontend/src/pages/: Home.tsx
sightline/: hooks.py  modules.txt  patches.txt
sightline/ai/: service.py
sightline/api/: __init__.py  health.py  onboarding.py  routes.py
sightline/connectors/: base.py  django_adapter.py  frappe_adapter.py  registry.py
sightline/exports/: service.py
sightline/onboarding/: service.py
sightline/semantic/: kpis.py
sightline/utils/: constants.py
