[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sightline"
version = "0.0.1"
description = "SightLine executive intelligence platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AAKTECH" }
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sightline*"]
